--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,4 +1,3 @@
-version: '3.8'
 services:
   fast_api:
     build: .
@@ -12,3 +11,7 @@ services:
         source: .
         target: /code
     working_dir: /code
+    healthcheck:
+      test: curl --fail http://localhost:5000/v1/health || exit 1
+      interval: 10m
+      timeout: 5s
